# AdquisicionManipulacionDatos

./: README.md
AMD/Caso practico/: pyproject.toml
AMD/Caso practico/clase/: pyproject.toml
AMD/Caso practico/clase/clase/imdb/spiders/: movies_released_in_2020.py
AMD/Caso practico/clase/datasets/: dataset.csv  dataset.json
AMD/Caso practico/clase/notebooks/: CasoPractico (1).ipynb
AMD/Caso practico/clase/notebooks/reports/: dataset-report.html
AMD/coches/caso-practico/: pyproject.toml
AMD/coches/caso-practico/notebooks/: CasoPractico.ipynb  herramientas.py  teleco.ipynb
AMD/fichero/: pyproject.toml
AMD/fichero/models/: churn-model.pck
AMD/fichero/notebooks/: CasoPractico.ipynb  Pruebas.ipynb
AMD/validaciones/: pyproject.toml
AMD/validaciones/validaciones/: pyproject.toml
AMD/validaciones/validaciones/enunciados/: Enunciado0.docx  Enunciado1.docx  Enunciado2.docx  Enunciado3.docx  Enunciado4.docx  ejercicio01.ipynb
AMD/validaciones/validaciones/notebooks/: ejercicio1.ipynb  ejercicio2.ipynb  ejercicio4 copy.ipynb  ejercicio4.ipynb
