[tool.poetry]
name = "clase"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scrapy = "^2.7.1"
ipykernel = "^6.20.2"
pandas = "^1.5.3"
numpy = ">=1.16.0,<1.24"
pandas-profiling = {extras = ["notebook"], version = "^3.6.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
