[tool.poetry]
name = "caso-practico"
version = "0.1.0"
description = ""
authors = ["Santiago Sanchez <sanchezsobrino@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
ipykernel = "^6.5.1"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
sklearn = "^0.0.post1"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
