[tool.poetry]
name = "validaciones"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
pip = "^23.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
